--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,7 @@ Flask==1.1.2
 beautifulsoup4==4.9.1
 python-dotenv==0.14.0
 joblib==1.0.0
+Werkzeug==1.0.1
+Authlib==0.15.2
+six==1.15.0
+hashids==1.3.1
